--- a/src/components/modalCreate/style.css
+++ b/src/components/modalCreate/style.css
@@ -113,7 +113,7 @@
   outline: none;
 }
 
-.add-button {
+.create-button {
   font-size: 18px;
   padding: 8px 20px;
   border: none;
@@ -126,7 +126,7 @@
   margin-top: 10px;
 }
 
-.add-button:hover {
+.creat-button:hover {
   background-color: rgb(23, 123, 199);
 }
 
@@ -149,4 +149,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (max-width: 700px) {
+  .container-add {
+    width: 350px;
+  }
+
+  .input-img {
+    align-items: center;
+  }
+
+  .image-change {
+    width: 200px;
+  }
+
+  .container-img-form {
+    flex-direction: column;
+    align-items: center;
+  }
 }
