--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -14,6 +14,10 @@ main h2 {
   justify-content: space-between;
 }
 
+.section-title-button button {
+  margin: 0;
+}
+
 .add-button {
   display: flex;
   align-items: center;
@@ -83,4 +87,33 @@ main h2 {
 
 .selected:hover {
   background-color: #1c9bfd;
+}
+
+@media screen and (max-width: 850px) {
+  .container-products {
+    width: 100%;
+  }
+
+  main {
+    padding: 110px 20px 20px 20px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .section-title-button {
+    flex-direction: column;
+    gap: 16px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .change-button {
+    font-size: 16px;
+    width: 160px;
+  }
+
+  .add-button {
+    width: 230px;
+    font-size: 16px;
+  }
 }
