--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -6,8 +6,12 @@
   font-family: "Inter";
 }
 
+.title {
+  display: none;
+}
+
 .img-title {
-  background-image: linear-gradient(125deg, #9ad8fd, #1c9bfd) ;
+  background-image: linear-gradient(125deg, #9ad8fd, #1c9bfd);
   height: 100%;
   width: 50%;
   display: flex;
@@ -32,6 +36,7 @@
 .container-form {
   height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 50%;
@@ -58,6 +63,7 @@
   width: 350px;
   padding: 10px 20px;
   background-color: #9ad8fd;
+  color: white;
   border: none;
   border-radius: 10px;
   font-family: "Inter", sans-serif;
@@ -71,7 +77,7 @@
   outline: none;
 }
 
-.container-form form button {
+.login-register-button {
   width: 100%;
   border: none;
   font-size: 28px;
@@ -84,12 +90,72 @@
   transition: 200ms;
 }
 
-.container-form form button:hover {
+.login-register-button:hover {
   transform: scale(1.02);
 }
 
-.error {
+.password-input {
+  position: relative;
+}
+
+.eye {
   position: absolute;
+  right: 0;
+  top: 0;
   bottom: 0;
-  color: red;
+  background: none;
+  border: none;
+  padding-right: 16px;
+  color: white;
+  cursor: pointer;
+}
+
+.register-button {
+  background: none;
+  color: #1c9bfd;
+  font-weight: 700;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.info-pass {
+  font-size: 12px;
+  color: gray;
+  text-align: center;
+  margin-top: 10px;
+}
+
+@media screen and (max-width: 950px) {
+  .title {
+    display: inline;
+    font-size: 100px;
+    font-family: "Leckerli One", cursive;
+    font-weight: 400;
+    font-style: normal;
+    color: #1c9bfd;
+    margin-bottom: 80px;
+  }
+
+  .img-title {
+    display: none;
+  }
+
+  .container-form {
+    width: 100%;
+  }
+
+  .container-form form {
+    gap: 20px;
+  }
+
+  .container-form input {
+    width: auto;
+  }
+
+  .container-form h2 {
+    font-size: 30PX;
+  }
 }
