--- a/src/components/cardProduct/style.css
+++ b/src/components/cardProduct/style.css
@@ -127,19 +127,29 @@
 
 @media screen and (max-width: 630px) {
   .img-product {
-    height: 80px;
+    width: 100px;
+    height: auto;
+  }
+
+  .card-product {
+    gap: 10px;
+    padding: 10px;
   }
 
   .limit-img {
-    min-width: 150px;
+    min-width: 100px;
   }
 
   .product-name {
     margin-top: 30px;
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .product-description {
-    font-size: 16px;
+    font-size: 14px;
+  }
+
+  .price {
+    font-size: 18px;
   }
 }
