--- a/src/components/cardProduct/style.css
+++ b/src/components/cardProduct/style.css
@@ -4,8 +4,9 @@
   background-color: white;
   transition: 200ms;
   align-items: center;
-  padding: 20px;
+  padding: 16px;
   position: relative;
+  gap: 16px;
 }
 
 .card-product:hover {
@@ -38,6 +39,7 @@
   align-items: center;
   width: 100%;
   justify-content: space-between;
+  gap: 16px;
 }
 
 .container-info-product div {
@@ -56,6 +58,7 @@
 .product-description {
   font-size: 18px;
   font-family: Inter;
+  line-height: 26px;
 }
 
 .price {
